--- a/requirements.txt
+++ b/requirements.txt
@@ -1,111 +1,24 @@
 adal==1.2.4
-azure-applicationinsights==0.1.0
-azure-batch==9.0.0
 azure-common==1.1.25
 azure-core==1.8.0
-azure-cosmosdb-nspkg==2.0.2
-azure-cosmosdb-table==1.0.6
-azure-datalake-store==0.0.49
-azure-eventgrid==1.3.0
-azure-graphrbac==0.61.1
-azure-identity==1.4.0
-azure-keyvault==4.1.0
-azure-keyvault-certificates==4.2.0
-azure-keyvault-keys==4.1.0
-azure-keyvault-secrets==4.2.0
-azure-loganalytics==0.1.0
-azure-mgmt-advisor==4.0.0
-azure-mgmt-applicationinsights==0.3.0
-azure-mgmt-authorization==0.61.0
-azure-mgmt-automation==0.1.1
-azure-mgmt-batch==9.0.0
-azure-mgmt-batchai==2.0.0
-azure-mgmt-billing==0.2.0
-azure-mgmt-cdn==5.1.0
-azure-mgmt-cognitiveservices==6.2.0
-azure-mgmt-commerce==1.0.1
-azure-mgmt-compute==13.0.0
-azure-mgmt-consumption==3.0.0
-azure-mgmt-containerinstance==2.0.0
-azure-mgmt-containerregistry==2.8.0
-azure-mgmt-containerservice==9.2.0
-azure-mgmt-cosmosdb==0.16.0
-azure-mgmt-costmanagement==0.2.0
-azure-mgmt-datafactory==0.12.0
-azure-mgmt-datalake-analytics==0.6.0
-azure-mgmt-datalake-nspkg==3.0.1
-azure-mgmt-datalake-store==0.5.0
-azure-mgmt-datamigration==4.0.0
-azure-mgmt-devspaces==0.2.0
-azure-mgmt-devtestlabs==4.0.0
-azure-mgmt-dns==3.0.0
-azure-mgmt-eventgrid==2.2.0
-azure-mgmt-eventhub==4.0.0
-azure-mgmt-hanaonazure==0.14.0
-azure-mgmt-iotcentral==3.1.0
-azure-mgmt-iothub==0.12.0
-azure-mgmt-iothubprovisioningservices==0.2.0
-azure-mgmt-keyvault==2.2.0
-azure-mgmt-loganalytics==0.7.0
-azure-mgmt-logic==3.0.0
-azure-mgmt-machinelearningcompute==0.4.1
-azure-mgmt-managementgroups==0.2.0
-azure-mgmt-managementpartner==0.1.1
-azure-mgmt-maps==0.1.0
-azure-mgmt-marketplaceordering==0.2.1
-azure-mgmt-media==2.2.0
+azure-mgmt-core==1.2.1
 azure-mgmt-monitor==0.11.0
-azure-mgmt-msi==1.0.0
-azure-mgmt-network==11.0.0
-azure-mgmt-notificationhubs==2.1.0
-azure-mgmt-nspkg==3.0.2
-azure-mgmt-policyinsights==0.5.0
-azure-mgmt-powerbiembedded==2.0.0
-azure-mgmt-rdbms==2.2.0
-azure-mgmt-recoveryservices==0.5.0
-azure-mgmt-recoveryservicesbackup==0.8.0
-azure-mgmt-redis==6.0.0
-azure-mgmt-relay==0.2.0
-azure-mgmt-reservations==0.7.0
 azure-mgmt-resource==10.2.0
-azure-mgmt-scheduler==2.0.0
-azure-mgmt-search==2.1.0
-azure-mgmt-servicebus==0.6.0
-azure-mgmt-servicefabric==0.5.0
-azure-mgmt-signalr==0.4.0
-azure-mgmt-sql==0.20.0
-azure-mgmt-storage==11.1.0
 azure-mgmt-subscription==0.6.0
-azure-mgmt-trafficmanager==0.51.0
-azure-mgmt-web==0.47.0
-azure-nspkg==3.0.2
-azure-servicebus==0.50.3
-azure-servicefabric==7.1.0.45
-azure-servicemanagement-legacy==0.20.7
-azure-storage-blob==12.4.0
-azure-storage-common==2.1.0
-azure-storage-file==2.1.0
-azure-storage-queue==12.1.2
+azure-mgmt-web==0.48.0
 certifi==2020.6.20
-cffi==1.14.2
+cffi==1.14.3
 chardet==3.0.4
-click==7.1.2
-cryptography==3.0
+cryptography==3.2.1
 idna==2.10
 isodate==0.6.0
-isort==5.4.2
-msal==1.5.0
-msal-extensions==0.2.2
-msrest==0.6.18
+msrest==0.6.19
 msrestazure==0.6.4
 oauthlib==3.1.0
-portalocker==1.7.1
 pycparser==2.20
 PyJWT==1.7.1
 python-dateutil==2.8.1
 requests==2.24.0
 requests-oauthlib==1.3.0
 six==1.15.0
-uamqp==1.2.10
-urllib3==1.25.10
-
+urllib3==1.25.11
